tmp/funnel-output_path-HIhXjLS1.tmp/gyak09/tests/unit/pods/errors/new/controller-test.jshint.js
/home/ubuntu/workspace/csaladitodo/tmp/jshinter-output_path-euVAW1gG.tmp/unit/pods/errors/new/controller-test.jshint.js